--- a/cv.html
+++ b/cv.html
@@ -28,10 +28,10 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link " aria-current="page" href="index.html">About Me</a>
+                            <a class="nav-link " aria-current="page" href="index.php">About Me</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link " href="#">Projects</a>
+                            <a class="nav-link " href="index.php#projects">Projects</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" href="cv.html">Resume</a>
