fix github link path

--- a/cv.html
+++ b/cv.html
@@ -159,7 +159,7 @@
     </div>
     <footer>
         <div class="row g-3 ">
-            <div class="col-md-4 col-10">
+            <div class="col-md-4 col-9">
                 <section id="contactInfo" class="text-white">
                     <a href="mailto:ofirduchovne@gmail.com">ofirduchovne@gmail.com</a>
                     <br>
@@ -167,11 +167,13 @@
                     <br>
                 </section>
             </div>
-            <div class="col-md-4 col-2 text-center">
-                <p style="display: inline-block; text-align: center;">
+            <div class="col-md-4 col-3 text-center">
+                <secton class="socialMediaLinks">
                     <a href="https://www.linkedin.com/in/ofir-duchovne/" class="fa fa-linkedin"
                         style="display: inline-block; text-align: center;"></a>
-                </p>
+                    <a href="https://github.com/asparagoose2" class="fa fa-github"
+                        style="display: inline-block; text-align: center;"></a>
+                </secton>
             </div>
             <div class="col-md-4 col-12 text-end">
                 <a href=" https://www.shenkar.ac.il/he/departments/engineering-software-department">תואר ראשון
